<resources>
    <string name="app_name">BOOKS</string>
    <string name="error_data_message">Error loading data from the GOOGLE Books API</string>
    <string name="title_text_view">Title Text View</string>
    <string name="search_title">Search</string>
    <string name="hint_title">Insert title!</string>
    <string name="hint_authors">Insert Author(s)</string>
    <string name="hint_publisher">Insert Publisher</string>
    <string name="hint_ISBN">Insert ISBN</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="no_search_data">Please insert valid text</string>

</resources>
