<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:hint="@string/hint_title"
        />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_authors"
        android:layout_marginTop="@dimen/margin_search_activity"/>

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_publisher"
        android:layout_marginTop="@dimen/margin_search_activity"/>

    <EditText
        android:id="@+id/etISBN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_ISBN"
        android:layout_marginTop="@dimen/margin_search_activity"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:layout_marginTop="@dimen/margin_search_activity"
        android:layout_gravity="center"
        android:background="@drawable/search_botton_shape"
        android:textSize="18sp"
        android:textColor="#FFFFFF"/>
</LinearLayout>